Fixed alignment

--- a/src/components/FantsGroup/FantsGroup.module.scss
+++ b/src/components/FantsGroup/FantsGroup.module.scss
@@ -3,3 +3,7 @@
   display: flex;
   justify-content: space-around;
 }
+
+.translateTop {
+  transform: translateY(-30px);
+}
